--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     <script src="css/style.css"></script>
   </head>
   <body>
-    <div class="container" style="height: 30%; width: 30%">
+    <!-- <div class="container" style="height: 30%; width: 30%">
       <canvas id="chart1" width="100" height="100"></canvas>
     </div>
     <div class="container" style="height: 30%; width: 30%">
       <canvas id="polarchart" width="100" height="100"></canvas>
-    </div>
+    </div> -->
     <script>
-      drawLineChart();
-      drawPolarChart("Johor");
-      //const dates, johor = getData();
+
+      //drawLineChart();
+      //drawPolarChart("Johor");
+      const dates, johor = getData();
+      console.log(dates);
     </script>
   </body>
 </html>
