--- a/index_ori.html
+++ b/index_ori.html
@@ -17,6 +17,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>>-->
     <!--Link to CSS file-->
+
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -27,8 +28,7 @@
       </div>
       <a href="#">Home</a>
       <a href="#">About</a>
-      <a href="#">State Status</a>
-      <a href="#">Search</a>
+      <a href="#Summary">Summary</a>
       <div class="animation start-home"></div>
     </nav>
 
@@ -37,7 +37,7 @@
     <!--Header section starts here-->
     <section class="header">
       <div class="container">
-        <h1>MYCOVID Header</h1>
+        <h1>MYCOVID-19</h1>
         <h4>
           Website for data and insights on COVID-19 situation in Malaysia.
         </h4>
@@ -48,61 +48,94 @@
     <!--Overview section starts here-->
     <section class="overview">
       <div class="container">
-        <div class="container60">
-          <h4>Vaccinated Population</h4>
-          <p style="font-size: small">Malaysia</p>
+        <div class="container-95">
+          <div class="container60">
+            <h4>Vaccinated Population</h4>
+            <p style="font-size: small">Malaysia</p>
+          </div>
+          <div class="container33">
+            <p style="font-size: small; text-align: right">Updated on xx</p>
+          </div>
           <br />
           <div class="container60">
-            <table class="nth-table" width="100%">
+            <table class="nth-table" id="overview-table" width="90%">
               <tr>
                 <td>Daily - Administration</td>
                 <td>Total - Administration</td>
               </tr>
               <tr class="spaceUnder">
-                <td><h3>+6000</h3></td>
-                <td><h3>+6000</h3></td>
+                <td><h3 id="daily_a">+</h3></td>
+                <td><h3 id="total_a">+6000</h3></td>
               </tr>
               <tr>
                 <td>Daily - First Dose</td>
                 <td>Total - First Dose</td>
               </tr>
               <tr class="spaceUnder">
-                <td><h3>+6000</h3></td>
-                <td><h3>+6000</h3></td>
+                <td><h3 id="daily_f">+6000</h3></td>
+                <td><h3 id="total_f">+6000</h3></td>
               </tr>
               <tr>
                 <td>Daily - Second Dose</td>
                 <td>Total - Second Dose</td>
               </tr>
               <tr class="spaceUnder">
-                <td><h3>+6000</h3></td>
-                <td><h3>+6000</h3></td>
+                <td><h3 id="daily_s">+6000</h3></td>
+                <td><h3 id="total_s">+6000</h3></td>
               </tr>
               <tr>
                 <td>Daily - Booster</td>
                 <td>Total - Booster</td>
               </tr>
               <tr class="spaceUnder">
-                <td><h3>+ 6,000</h3></td>
-                <td><h3>+ 6,000</h3></td>
+                <td><h3 id="daily_b">+ 6,000</h3></td>
+                <td><h3 id="total_b">+ 6,000</h3></td>
               </tr>
             </table>
           </div>
-          <div class="container33"></div>
+          <div class="container33">
+            <canvas id="stackedBar" width="100" height="100"></canvas>
+          </div>
+          <div class="clearfix"></div>
         </div>
-        <div class="container33">
-          <h4>Healthcare</h4>
-        </div>
+        <!-- <div class="container33">
+          <h4></h4>
+          <canvas id="stackedBar" width="100" height="90"></canvas>
+        </div> -->
         <div class="clearfix"></div>
       </div>
     </section>
     <!--Graph 1 section ends here-->
 
     <!--TimeLine graphs section starts here-->
-    <section class="timeline-graphs">
+    <section class="summary">
       <div class="container">
-        Timeline Graph
-        <canvas id="stackedBar" width="100" height="100"></canvas>
+        <div class="container-95">
+          <div class="container60">
+            <h4>Summary</h4>
+            <p style="font-size: small">At A Glance</p>
+          </div>
+          <div class="container33">
+            <p style="font-size: small; text-align: right">Updated on xx</p>
+          </div>
+          <div class="clearfix"></div>
+          <div class="summarytable">
+            <table border="1" width="100%">
+              <tr>
+                <td>States</td>
+                <td class="text-right">Cases</td>
+                <td class="text-right">Per 1M</td>
+                <td class="text-right">Trend</td>
+                <td class="text-right">Deaths</td>
+                <td class="text-right">Per 1M</td>
+                <td class="text-right">Trend</td>
+                <td class="text-right">Hospital Admission</td>
+                <td class="text-right">Per 1M</td>
+                <td class="text-right">Trend</td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
     </section>
     <!--TimeLine graphs section ends here-->
@@ -120,6 +153,43 @@
 
     <script>
       drawStackedBar();
+
+      //const vaxData = getVaxMYData();
+      //
+      (async () => {
+        const {
+          daily_administration,
+          daily_firstdose,
+          daily_seconddose,
+          daily_booster,
+          total_administration,
+          total_firstdose,
+          total_seconddose,
+          total_booster,
+        } = await getVaxMYData();
+        console.log(daily_booster);
+        document.getElementById("daily_a").innerHTML =
+          "+ " + daily_administration;
+        document.getElementById("daily_f").innerHTML = "+ " + daily_firstdose;
+        document.getElementById("daily_s").innerHTML = "+ " + daily_seconddose;
+        document.getElementById("daily_b").innerHTML = "+ " + daily_booster;
+        document.getElementById("total_a").innerHTML = total_administration;
+        document.getElementById("total_f").innerHTML = total_firstdose;
+        document.getElementById("total_s").innerHTML = total_seconddose;
+        document.getElementById("total_b").innerHTML = total_booster;
+      })();
+      console.log(vaxData);
+      let { baz, foo } = (function () {
+        let foo = 0;
+        var baz = 0;
+        for (let i = 0; i <= 0; i++) {
+          foo = 3;
+          baz = 40;
+        }
+        console.log(baz);
+        return { foo, baz };
+      })();
+      console.log(baz);
     </script>
   </body>
 </html>
